Add intro and goals

--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <html>
 <head>
-
+    <title>Angmerica</title>
 </head>
 
 <body>
-    <p>Hello World from Angmerica! 6</p>
+    <h1>Hello World from Angmerica!</h1>
+    <p>I am learning to start my own webpage.</p>
+    
+    <div>To Do:
+        <ul>
+            <li>DONE: Learn how to get a web Page</li>
+            <li>DONE: Learn how to do CI</li>
+            <li>Learn Chef</li>
+            <li>Angularify this page</li>
+            <li>Create a whole MEAN stack</li>
+            <li>Show off your work</li>
+        </ul>
+    </div>
 </body>
 </html>
