--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <ul>
             <li>DONE: Learn how to get a web Page</li>
             <li>DONE: Learn how to do CI</li>
-            <li>Learn Chef</li>
-            <li>Angularify this page</li>
-            <li>Create a whole MEAN stack</li>
-            <li>Show off your work</li>
+            <li>Learn Chef/Vagrant</li>
+            <li>Angularify this site</li>
+            <li>Create a whole MEAN stack app</li>
+            <li>Show off my work</li>
         </ul>
     </div>
 </body>
