--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
     <p>I am learning to start my own webpage.</p>
 
     <div>To Do:
-        <ul>
+        <ol>
             <li>DONE: Learn how to get a web Page</li>
             <li>DONE: Learn how to do CI</li>
-            <li>Learn Chef/Vagrant</li>
             <li>Angularify this site</li>
+            <li>Create angular seed</li>
+            <li>Create angular playbook</li>
+            <li>Create angular tutorial</li>
+            <li>Create angular scaffolder</li>
+            <li>Learn Chef/Vagrant</li>
             <li>Create a whole MEAN stack app</li>
             <li>Show off my work</li>
-        </ul>
+        </ol>
     </div>
 </body>
 </html>
