--- a/app/index.html
+++ b/app/index.html
@@ -22,13 +22,16 @@
 
     <!-- Add your site or application content here -->
     <div class="container">
+
+      <div main-header></div>
+
       <div class="header">
         <ul class="nav nav-pills pull-right">
           <li class="active"><a ng-href="#">Home</a></li>
           <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#">Contact</a></li>
+          <li><a ng-href="#/resume">Resume</a></li>
         </ul>
-        <h3 class="text-muted">angmerica</h3>
+        <h3 class="text-muted">Angmerica</h3>
       </div>
 
       <div ng-view=""></div>
@@ -68,10 +71,14 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
-        <!-- endbuild -->
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="components/ang.module.js"></script>
+    <script src="components/ang.route.js"></script>
+
+    <script src="components/header/header.module.js"></script>
+    <script src="components/header/header.directive.js"></script>
+    <script src="components/main/main.controller.js"></script>
+    <script src="components/about/about.controller.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
