--- a/app/index.html
+++ b/app/index.html
@@ -23,16 +23,7 @@
     <!-- Add your site or application content here -->
     <div class="container">
 
-      <div main-header></div>
-
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#/resume">Resume</a></li>
-        </ul>
-        <h3 class="text-muted">Angmerica</h3>
-      </div>
+      <div header></div>
 
       <div ng-view=""></div>
 
@@ -75,8 +66,9 @@
     <script src="components/ang.module.js"></script>
     <script src="components/ang.route.js"></script>
 
-    <script src="components/header/header.module.js"></script>
-    <script src="components/header/header.directive.js"></script>
+    <script src="components/core/header/header.module.js"></script>
+    <script src="components/core/header/header.directive.js"></script>
+
     <script src="components/main/main.controller.js"></script>
     <script src="components/about/about.controller.js"></script>
     <!-- endbuild -->
