changed comments. add modules to each components

--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,10 @@
     <script src="components/core/header/header.module.js"></script>
     <script src="components/core/header/header.directive.js"></script>
 
+    <script src="components/main/main.module.js"></script>
     <script src="components/main/main.controller.js"></script>
+
+    <script src="components/about/about.module.js"></script>
     <script src="components/about/about.controller.js"></script>
     <!-- endbuild -->
 </body>
