--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
       <div ng-view=""></div>
 
       <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-heart"></span>I love this stuff</p>
       </div>
     </div>
 
@@ -74,6 +74,9 @@
 
     <script src="components/about/about.module.js"></script>
     <script src="components/about/about.controller.js"></script>
+
+    <script src="components/resume/resume.module.js"></script>
+    <script src="components/resume/resume.controller.js"></script>
     <!-- endbuild -->
 </body>
 </html>
