update gruntfile to include index file

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
 
     <!-- Add your site or application content here -->
     <div class="container">
-
+      hello?
       <div header></div>
 
       <div ng-view=""></div>
