--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,16 @@
 
     <!-- Add your site or application content here -->
     <div class="container">
-      <div header></div>
+      <!-- <div header></div> -->
+
+      <div class="header">
+      <ul class="nav nav-pills pull-right">
+        <li class="active"><a ng-href="#">Main</a></li>
+        <li><a ng-href="#/about">About</a></li>
+        <li><a ng-href="#/resume">Resume</a></li>
+      </ul>
+      <h3 class="text-muted">Angmerica</h3>
+      </div>
 
       <div ng-view=""></div>
 
