--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
       <div ng-view=""></div>
 
       <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span>I love this stuff</p>
+        <p>I <span class="glyphicon glyphicon-heart"></span> this stuff</p>
       </div>
     </div>
 
